[MHP-25][ global fix - the line above the cards and the outline of the boxes of the notification symbol and the light dark mode is not really visable, can uyou please change to the accent colour from the blazzio site. ]

--- a/src/assets/scss/common/cards.scss
+++ b/src/assets/scss/common/cards.scss
@@ -45,4 +45,6 @@
 
 .card-wrapper {
   width: 100%;
+  border-radius: $border-radius;
+  overflow: hidden;
 }
